[package]
name = "experiments"
version = "0.1.0"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.53"
geos = { version = "8.0.4", features = ["v3_8_0"] }
osmnodecache = "0.6.0"
osmpbf = "0.2.7"
rayon = "1.5.1"
separator = "0.4.1"
clap = { version = "3.0.14", features = ["derive"] }
